group 'com.github.lordcrekit'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
group 'com.github.lordcrekit'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.jsoup', name: 'jsoup', version: '1.8.3'
    compile group: 'org.json', name: 'json', version: '20171018'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}
